tests/multiubuntu/test-cases/TC_24/TC_24_ingress_matchlabels_toPorts_toHttps_multiple_urls.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-4
      group: group-2
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-2
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /test1
        - method: GET
          path: /test2
---
